maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: not found: value indic
indic(11,5,0) 
^